--- a/detailkia.html
+++ b/detailkia.html
@@ -60,18 +60,18 @@
 <body>
 
 <header>
-  <h1>🚗 SIÊU PHẨM MORNING SI 2018</h1>
+  <h1>🚗 MORNING SI 2018</h1>
 </header>
 
 <div class="container">
 
   <div class="gallery">
-    <img src="/img/kiamorning/4506236426691648920.jpg">
-    <img src="/img/kiamorning/59c06e1b4927c6799f36.jpg">
-    <img src="/img/kiamorning/4506236426691648920 (4).jpg">
-    <img src="/img/kiamorning/4506236426691648920 (5).jpg">
-    <img src="/img/kiamorning/4506236426691648920 (6).jpg">
-    <img src="/img/kiamorning/4506236426691648920 (7).jpg">
+    <img src="img/kiamorning/4506236426691648920.jpg">
+    <img src="img/kiamorning/59c06e1b4927c6799f36.jpg">
+    <img src="img/kiamorning/4506236426691648920 (4).jpg">
+    <img src="img/kiamorning/4506236426691648920 (5).jpg">
+    <img src="img/kiamorning/4506236426691648920 (6).jpg">
+    <img src="img/kiamorning/4506236426691648920 (7).jpg">
   </div>
 
   <h2>🚗 SIÊU PHẨM MORNING SI 2018 – ĐI 1 VẠN KM (HÀNG HIẾM CÒN SÓT LẠI)</h2>
@@ -82,7 +82,7 @@
     Xe dành cho bác nào thích sự nguyên bản và chất lượng như xe mới từ hãng ra.
   </p>
 
-  <h3>✨ Tình trạng xe cực phẩm:</h3>
+  <h3>✨ Tình trạng xe:</h3>
   <ul>
     <li>✅ Odo: Hơn 1 vạn km (Bao check test toàn quốc – phát hiện tua tặng xe)</li>
     <li>✅ Dàn lốp: Nguyên bản theo xe từ 2018, gai dày bịch</li>
